buildscript {
  repositories {
    mavenCentral()
  }
  dependencies {
    classpath 'biz.aQute.bnd:biz.aQute.bnd.gradle:7.4.0'
  }
}

plugins {
  id 'java-library'
  id 'jacoco'
  id 'signing'
  id 'maven-publish'
  id 'io.github.gradle-nexus.publish-plugin' version '1.3.0'
}
apply plugin: 'biz.aQute.bnd.builder'


def getVersionName() {
  try {
    def output = providers.exec {
      executable 'git'
      args = ['describe', '--tags']
    }.standardOutput.asText.get().trim()
    // strip of leading "v"
    return output.substring(1)
  } catch (ignore) {
    println(ignore)
    logger.info('Error running git describe (' + ignore + '), defaulting to 0.0.0')
    return '0.0.0'
  }
}

project.group = 'org.pharmgkb'
project.version = getVersionName()

ext {
  baseName = 'pgkb-common'
  moduleName = 'org.pharmgkb.common'
  description = 'Common code shared among all PharmGKB projects.'
  url = 'https://github.com/PharmGKB/' + project.ext.baseName + '.git'
  scm = 'scm:git@github.com:PharmGKB/' + project.ext.baseName + '.git'
  orgName = 'PharmGKB'
  orgUrl = 'https://www.clinpgx.org'
  // grab properties from environment for CI
  sonatypeUser = project.hasProperty('ossrhUsername') ? ossrhUsername : System.getenv('OSSRH_USERNAME')
  sonatypePwd  = project.hasProperty('ossrhPassword') ? ossrhPassword : System.getenv('OSSRH_PASSWORD')
  sonatypeStagingProfileId = project.hasProperty('ossrhStagingProfileId') ? ossrhStagingProfileId : System.getenv('OSSRH_STAGING_PROFILE_ID')
}

// cannot modify signing directly, have to do it like this
// reference: https://getstream.io/blog/publishing-libraries-to-mavencentral-2021/
ext['signing.keyId'] = ''
ext['signing.password'] = ''
ext['signing.secretKeyRingFile'] = ''
if (System.getenv('SIGNING_KEY')) {
  ext['signing.key'] =  System.getenv('SIGNING_KEY')
  ext['signing.password'] = System.getenv('SIGNING_PASSWORD')
}  else if (project.hasProperty('gpg.key')) {
  ext['signing.key'] =  project.getProperty('gpg.key')
  ext['signing.password'] = project.getProperty('gpg.password')
}  else if (project.hasProperty('gpg.keyId')) {
  ext['signing.keyId'] =  project.getProperty('gpg.keyId')
  ext['signing.password'] = project.getProperty('gpg.password')
  ext['signing.secretKeyRingFile'] =  project.getProperty('gpg.secretKeyRingFile')
} else if (System.getenv('SIGNING_KEY_ID') != null) {
  ext['signing.keyId'] =  System.getenv('SIGNING_KEY_ID')
  ext['signing.password'] = System.getenv('SIGNING_PASSWORD')
  ext['signing.secretKeyRingFile'] =  System.getenv('SIGNING_SECRET_KEY_RING_FILE')
}


repositories {
  mavenCentral()
}

dependencies {
  // api, not implementation: these types appear in this library's own public API (CliHelper.addOption(Option),
  // ExtendedEnumConverter implements Converter, @Nullable on nearly every public signature) - implementation
  // scope wouldn't put them on downstream consumers' compile classpath
  api group: 'commons-beanutils', name: 'commons-beanutils', version: '1.11.0'
  api group: 'commons-cli', name: 'commons-cli', version: '1.11.0'
  api group: 'org.jspecify', name: 'jspecify', version: '1.0.1'

  implementation group: 'commons-codec', name: 'commons-codec', version: '1.22.1'
  implementation group: 'commons-io', name: 'commons-io', version: '2.22.0'
  implementation group: 'com.google.guava', name: 'guava', version: '33.7.1-jre'
  implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.20.0'
  implementation group: 'org.apache.commons', name: 'commons-text', version: '1.15.0'
  implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.18'

  // JUnit 6 unifies Platform/Jupiter/Vintage under one version number - junit-platform-launcher must match
  testImplementation group: 'org.junit.jupiter', name: 'junit-jupiter', version: '6.1.3'
  testImplementation group: 'org.hamcrest', name: 'hamcrest', version: '3.0'
  testImplementation group: 'org.mockito', name: 'mockito-core', version: '5.23.0'
  testImplementation group: 'org.mockito', name: 'mockito-junit-jupiter', version: '5.23.0'
  testRuntimeOnly group: 'org.junit.platform', name: 'junit-platform-launcher', version: '6.1.3'
}


// --release (not sourceCompatibility/targetCompatibility) also pins the API surface to JDK 21, not just the
// bytecode/language level - otherwise building with a newer JDK could silently compile a reference to a
// JDK 22+-only API into a class file nominally targeting 21, which then throws NoSuchMethodError on a real
// JDK 21 runtime. CI (.github/workflows/*.yml) already pins exactly JDK 21, so this closes the gap for any
// other build environment instead.
tasks.withType(JavaCompile).configureEach {
  options.release = 21
}

apply from: 'pgkb-build.gradle'
